<resources>
    <string name="app_name">IFBA Ilhéus</string>
    <string name="app_name_header">Manual do aluno - Campus Ilhéus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sobre">Sobre o app</string>
    <string name="campus_ilheus">IFBA - Campus Ilhéus</string>
    <string name="mensagem_diretor">Mensagem aos alunos</string>
    <string name="mensagem_diretor_texto">
        Estimados estudantes,\n\n
O IFBA Câmpus Ilhéus nasceu com a expansão da Rede Federal de Educação Profissional em dezembro de 2010. Atualmente contamos com a presença de cerca de setecentos alunos matriculados, e desde o nosso início em 2011, temos uma trajetória voltada ao conhecimento através do ensino, pesquisa e extensão, ofertando cursos técnicos de nível médio nas modalidades integrado e subsequente e diversos trabalhos de pesquisas e projetos de extensão desenvolvidos pela nossa comunidade acadêmica. \n\n
Nesta caminhada juntos precisaremos de perseverança, compromisso, responsabilidade e amor pela educação. Desejamos que ao longo de sua vida acadêmica, possam comprometer-se com esta Instituição e além das atividades de ensino, estejam envolvidos com os programas e projetos que oferecemos. \n\n
Para isto, é importante que você tenha acesso as informações de nosso Campus e que acompanhe o cotidiano da Instituição através de nosso site institucional (http://www.ilheus.ifba.edu.br) e de nosso aplicativo Manual do Aluno.\n\n
O IFBA Campus Ilhéus está de portas abertas e com a sua participação nós poderemos construir uma escola cada dia melhor. \n\nSejam bem vindos!


    </string>
    <string name="o_instituto">O Instituto</string>
    <string name="o_instituto_texto"> O Instituto Federal de Educação, Ciência e Tecnologia da Bahia (IFBA), criado pela Lei nº 11.892/2008, é resultado das mudanças promovidas no antigo Centro Federal de Educação Tecnológica da Bahia (Cefet-BA).\n\nÉ uma autarquia do Governo Federal e pertence à Rede Federal de Educação Profissional, Científica e Tecnológica do Ministério da Educação (MEC), que existe há 105 anos. Na Bahia, instituiu-se, em 1910, em Salvador, como a primeira Escola de Aprendizes Artífices, passando por endereços como Centro Operário da Bahia, no Pelourinho, Largo dos Aflitos e, em 1926, foi para o Barbalho, onde hoje funciona o câmpus Salvador. \n\nCom o passar dos anos, teve distintas denominações, como Liceu Industrial de Salvador, em 1937; Escola Técnica de Salvador – ETS, em 1942; Escola Técnica Federal da Bahia – ETFBA, em 1965; Centro Federal de Educação Tecnológica da Bahia – Cefet/BA (resultado da fusão entre Centec - Centro de Educação Tecnológica da Bahia e ETFBA), em 1993; até chegar ao atual IFBA, desde 2008. \n\nCom a última transformação, o Instituto passou a ter características bem peculiares, equipara-se às universidades federais; atua com a verticalização do ensino, pois oferta educação básica, profissional e superior; apresenta estrutura pluricurricular e multicampi; assume o papel de instituição acreditadora e certificadora de competências profissionais (Rede Certific).\n\nExpansão da Rede\n\nCom a proposta de contribuir para o desenvolvimento produtivo, social e cultural, o IFBA transforma realidades ao oferecer cursos distribuídos pelo território do Estado da Bahia.\n\nCom o desafio de interiorizar a educação profissional e superior, a qual esteve, durante muitos anos, concentrada em grandes centros urbanos, hoje o IFBA leva o ensino público, gratuito e de qualidade para 22 cidades da Bahia. Contamos com 17 câmpus e 5 Núcleos Avançados espalhados pelo Estado. Os câmpus novos de Lauro de Freitas e Santo Antônio de Jesus estão em fase final de construção.\n\nNossa Missão: “Promover a formação do cidadão histórico-crítico, oferecendo ensino, pesquisa e extensão com qualidade socialmente referenciada, objetivando o desenvolvimento sustentável do país”. \n
</string>
    <string name="conheca_campus">Conheça o campus</string>
    <string name="historico">Histórico</string>
    <string name="historico_texto">A rede de "IF's, antigos "CEFETs", está distribuída por todas as regiões do país, possuindo um conjunto de cursos voltados para formação profissional de acordo com o perfil da região na qual está localizado.\n\nO Campus Ilhéus nasceu com a expansão da Rede Federal de Educação Profissional em dezembro de 2010. O Campus iniciou suas atividades em 2011 com o desenvolvimento de dois projetos de extensão: Pró-IFBA - curso: preparatório para o ingresso no IFBA Campus Ilhéus, ofertado a estudantes das escolas públicas dos municípios de Ilhéus e Itabuna e o projeto Mulheres Mil, que visa integrar mulheres ao mundo do trabalho através da oferta de cursos de curta duração.\n\nEm 2012, o Campus iniciou os cursos nas modalidades de Ensino médio Integrado e Subseqüente ao Ensino Médio nas seguintes áreas:\n\n- Técnico em Informática;\n- Técnico em Segurança do Trabalho\n- Técnico em Edificações\n\nO câmpus Ilhéus já ofertou além dos cursos integrados e subsequentes de técnico de nível médio, cursos de formação inicial e continuada visando a proﬁssionalização de curta e média duração através dos programas:\n\n- PRONATEC - Programa Nacional de Acesso ao Ensino Técnico e Emprego.\n\n- PROFUNCIONÁRIO - Programa de Formação Inicial em Serviço dos Proﬁssionais da Educação Básica dos Sistemas de Ensino Público.\n\n- MULHERES MIL - Programa do Governo Federal que se destina a capacitar mulheres de baixa renda em atividades produtivas vinculadas às vocações econômicas das regiões.</string>
    <string name="cursos">Cursos</string>
    <string name="cursos_texto">Os cursos técnicos do IFBA são cursos voltados para o mercado de trabalho, onde o aluno poderá adquirir conhecimentos avançados na área profissional correspondente ao curso que escolher.\n\nNo Instituto Federal da Bahia são oferecidos duas vertentes:\n\n
- Cursos Técnicos Subsequentes, onde o aluno deverá possuir o ensino médio completo, por isso a palavra subsequente, pois estes cursos são subsequentes ao ensino médio com carga horária dividida em 2 anos.\n\n
- Cursos Técnicos Integrados ao Ensino Médio, são cursos que ofertam tanto as matérias específicas do curso técnico escolhido como também as matérias básicas do ensino médio padrão, como português e matemática. A carga horária é dividida em 4 anos.\n\n
Os Cursos Técnicos ofertados na Modalidade Subsequente no Campus Ilhéus são:\n\n- Técnico em Informática\n- Técnico em Segurança do Trabalho\n- Técnico em Edificações\n\nOs Cursos Técnicos ofertados na Modalidade Integrada no Campus Ilhéus são:\n\n
- Técnico em Informática\n
- Técnico em Segurança do Trabalho\n
- Técnico em Edificações\n\n
</string>
    <string name="acessar_planos_curso">Acessar planos de curso</string>
    <string name="departamentos">Departamentos</string>
    <string name="estrutura_fisica">Estrutura Física</string>
    <string name="ramais">Lista de Ramais</string>
    <string name="fotos">Fotos</string>
    <string name="manualAluno">Manual do Aluno</string>
    <string name="rotina">Rotinas Acadêmicas</string>
    <string name="direitos_deveres">Direitos e Deveres</string>
    <string name="dicas">Dicas importantes</string>
    <string name="assistencia">Apoio ao estudante</string>
    <string name="docentes">Quadro de Docentes</string>
    <string name="estagios">Estágios</string>
    <string name="calendario">Calendário Acadêmico</string>
    <string name="horarios">Horários</string>
    <string name="regulamentos">Regulamentos</string>
    <string name="plano_curso">Plano de Curso</string>
    <string name="org_ditatica">Organização Didática</string>
    <string name="agenda">Agenda de Atividades</string>
    <string name="pesquisa_extensao">Pesquisa e Extensão</string>
    <string name="processo_seletivo">Processo Seletivo</string>
    <string name="adicionar_tarefas">Adicionar tarefas</string>
    <string name="salvar">Salvar</string>
    <string name="data_tarefa">Data da tarefa</string>
    <string name="descricao_tarefa">Descrição da tarefa</string>
    <string name="notificarTarefa">Sinalizar tarefa (notificar) com antecedência de:</string>
    <string name="taes">Quadro de TAEs</string>
</resources>